<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_main_action_gps"
		android:title="@string/menu_search_gps"
		android:icon="@drawable/ic_gps"
		app:showAsAction="always" />

	<item
		android:id="@+id/menu_main_search_icon"
		android:title="@string/menu_search_title"
		android:icon="@drawable/ic_search"
		app:showAsAction="always" />

</menu>
