...
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mainToolbar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/actionBarSize"
            android:layout_marginEnd="?attr/actionBarSize"
            android:layout_below="@+id/mainToolbar"
            android:orientation="vertical"
...
